# tickflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  STATE.md  docker-compose.yaml  fixtures.yaml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
contracts/: rules.yaml  telemetry_schema.json  trades.v1.avsc
docs/: architecture.md  decisions.md
fixtures/: trades.v1.clean.parquet
scripts/: release_gate.sh
site/: index.html  telemetry.json
src/tickflow/: __init__.py  bars.py  capture.py  cli.py  contracts.py  export.py  fixture.py  gate.py  ingest.py  metrics.py  sanity.py
tests/: test_bars.py  test_capture.py  test_contracts.py  test_export.py  test_fixture.py  test_gate.py  test_ingest.py  test_metrics.py  test_sanity.py  test_slo_experiment.py  test_smoke.py
